[package]
name = "re_excel"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.8.3", default-features = true, features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }  # 1.x 系はそのまま
serde = { version = "1.0", features = ["derive"] }          # 1.x 系はそのまま
serde_json = "1.0"                                          # 1.x 系はそのまま
serde_yaml = "0.9"                                          # 0.9.x 系はそのままカバー
serde-xml-rs = "0.7.0"                                      # ⇒ 0.5.1 → 0.7.0
calamine = "0.27.0"                                         # ⇒ 0.18.0 → 0.27.0
csv = "1.3.1"                                               # ⇒ 1.1 → 1.3.1
hyper = { version = "0.14", features = ["full"] }

[license]
# 依存クレートとして明示的に「許可」する SPDX ライセンス式
allow = [
  "MIT",       # 標準の MIT
  "0BSD",      # BSD Zero Clause
  "MIT-0",     # MIT No Attribution
  "Unlicense", # 完全パブリックドメイン
  "CC0-1.0",   # Creative Commons CC0 1.0 Universal
]

# 警告にとどめたいものがあればここで指定（今回はなし）
warn = []

# それ以外はすべて拒否
deny = []